--- a/views/adminDashboardSidebar.ejs
+++ b/views/adminDashboardSidebar.ejs
@@ -1,88 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/2c8d038c04.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="/images/logo.png" type="website icon">
-    <link rel="stylesheet" href="/css/dashboard.css">
-    <style>
-        .card{
-            border: none;
-        }
-        .fixed-sidebar{
-            width: 230px;
-        }
-        .custom-border{
-            z-index:10;
-        }
-        .main-body{
-            padding-left: 230px;
-        }
-    </style>
-</head>
-<body>
-    <!-- sidebar -->
-    <main>
-        <section>
-            <div class="container-fluid mt-2">
-                <div class="row">
-                    <!-- Hamburger button for mobile -->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light d-lg-none">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminSidebarMenu" aria-controls="adminSidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                    </nav>
-                    
-    
-                    <!-- Sidebar for larger screens -->
-                    <div class="col-md-3 col-lg-2 custom-border fixed-sidebar d-none d-lg-block">
-                        <div class="d-flex flex-column align-items-center">
-                            <i class="fa-solid fa-gears fs-1"></i>
-                          <!-- <img src="/images/logo.png" alt="logo" class="img-fluid logo mb-lg-5"> -->
-                        </div>
-                        <div class="sidebar mt-3">
-                            <!-- <a href="#" class="active sidebar-link"><i class="fa-solid fa-chart-simple"></i> Overview</a> -->
-                            <!-- <a href="/siteSetting" class="sidebar-link"><i class="fa-solid fa-users-gear"></i> Site Setting</a> -->
-                            
-                            <a href="/addActivity" class="sidebar-link"><i class="fa-solid fa-square-plus"></i> Add Activity </a>
-                            <a href="/viewActivity" class="sidebar-link"><i class="fa-solid fa-user-shield"></i> Activity Management</a>
-                             <a href="/viewAccount" class="sidebar-link"><i class="fa-solid fa-gear"></i> Account Info</a>
-                            <a href="/contacts" class="sidebar-link"><i class="fa-solid fa-address-card"></i> View Contacts</a>
-                            <!-- <a href="/admin/productMgmt" class="sidebar-link"><i class="fa-brands fa-product-hunt"></i> Product Management</a>
-                            <a href="/admin/orderStatus" class="sidebar-link"><i class="fa-solid fa-truck"></i> Order Status</a> -->
-                            <a href="logout" class="sidebar-link"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
-                        </div>
-                    </div>
-    
-                    <!-- Collapsible sidebar for mobile -->
-                    <div class="collapse navbar-collapse" id="adminSidebarMenu">
-                        <div class="sidebar d-lg-none">
-                            <!-- <a href="#" class="active sidebar-link">Overview</a> -->
-                            <!-- <a href="/siteSetting" class="sidebar-link"><i class="fa-solid fa-users-gear"></i> Site Setting</a> -->
-                            
-                            <a href="/addActivity" class="sidebar-link"><i class="fa-solid fa-square-plus"></i> Add Activity</a>
-                            <a href="/viewActivity" class="sidebar-link"><i class="fa-solid fa-user-shield"></i> Activity Management</a>
-                            <a href="/viewAccount" class="sidebar-link"><i class="fa-solid fa-gear"></i> Account Info</a>
-                            <a href="/contacts" class="sidebar-link"><i class="fa-solid fa-address-card"></i></i> View Contacts</a>
-                            <!-- <a href="/admin/productMgmt" class="sidebar-link"><i class="fa-brands fa-product-hunt"></i> Product Management</a>
-                            <a href="/admin/orderStatus" class="sidebar-link"><i class="fa-solid fa-truck"></i> Order Status</a> -->
-                            <a href="logout" class="sidebar-link"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- main body -->
-    </main>
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+<!-- Sidebar Partial: adminDashboardSidebar.ejs -->
+<div class="d-flex">
+  <!-- Sidebar -->
+  <nav class="sidebar fixed-sidebar d-none d-lg-flex flex-column p-3 shadow">
+    <div class="text-center mb-4">
+      <i class="fa-solid fa-gears fs-1 mb-3"></i>
+    </div>
+    <a href="/addActivity" class="sidebar-link"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
+    <a href="/viewActivity" class="sidebar-link"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
+    <a href="/viewAccount" class="sidebar-link"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
+    <a href="/contacts" class="sidebar-link"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
+    <a href="/logout" class="sidebar-link"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
+  </nav>
 
-    <script src="/scripts/dashboard.js"></script>
-</body>
-</html>
+  <!-- Mobile Toggle -->
+  <nav class="navbar navbar-light bg-light d-lg-none w-100">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminSidebarMenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div class="collapse" id="adminSidebarMenu">
+      <div class="bg-white p-3">
+        <a href="/addActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
+        <a href="/viewActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
+        <a href="/viewAccount" class="sidebar-link d-block mb-2"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
+        <a href="/contacts" class="sidebar-link d-block mb-2"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
+        <a href="/logout" class="sidebar-link d-block"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
+      </div>
+    </div>
+  </nav>
+</div>
