--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,12 +57,12 @@
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
                   <input type="email" name="email" class="form-control w-50 text-center mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp">
                   
-                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                 </div>
                 <div class="mb-3 text-center">
                   <label for="exampleInputPassword1" class="form-label">Password</label>
                   <input type="password" name="password" class="form-control w-50 text-center mx-auto" id="exampleInputPassword1">
-                  <div id="passwordHelpBox" class="form-text"> Your password must be minimum 8 characters long, contain letters and numbers or special characters only.</div>
+                  <!-- <div id="passwordHelpBox" class="form-text"> Your password must be minimum 8 characters long, contain letters and numbers or special characters only.</div> -->
                 </div>
                
                 <button type="submit" class="btn btn-primary w-25 " id="btnsubmit">Submit</button>
