--- a/views/adminDashboardSidebar.ejs
+++ b/views/adminDashboardSidebar.ejs
@@ -5,6 +5,8 @@
     <div class="text-center mb-4">
       <i class="fa-solid fa-gears fs-1 mb-3"></i>
     </div>
+    
+    <a href="/setting" class="sidebar-link"><i class="fa-solid fa-sliders"></i> Site Setting</a>
     <a href="/addActivity" class="sidebar-link"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
     <a href="/viewActivity" class="sidebar-link"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
     <a href="/viewAccount" class="sidebar-link"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
@@ -21,6 +23,8 @@
     </div>
     <div class="collapse" id="adminSidebarMenu">
       <div class="bg-white p-3">
+        
+    <a href="/setting" class="sidebar-link"><i class="fa-solid fa-sliders"></i> Site Setting</a>
         <a href="/addActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
         <a href="/viewActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
         <a href="/viewAccount" class="sidebar-link d-block mb-2"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
