--- a/views/siteSettings.ejs
+++ b/views/siteSettings.ejs
@@ -27,7 +27,7 @@
 <div class="container">
   <div class="settings-box">
     <h3>Site Settings</h3>
-    <form action="/updateSiteSettings" method="POST">
+    <form action="/setting" method="POST">
       <div class="mb-3">
         <label class="form-label">Site Name</label>
         <input type="text" class="form-control" name="siteName" value="<%= site.siteName %>" required>
