moving towards notice posting

--- a/views/adminDashboardSidebar.ejs
+++ b/views/adminDashboardSidebar.ejs
@@ -8,6 +8,7 @@
     
     <a href="/setting" class="sidebar-link"><i class="fa-solid fa-sliders"></i> Site Setting</a>
     <a href="/addActivity" class="sidebar-link"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
+    <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i> Add Notice</a>
     <a href="/viewActivity" class="sidebar-link"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
     <a href="/viewAccount" class="sidebar-link"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
     <a href="/contacts" class="sidebar-link"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
@@ -26,6 +27,7 @@
         
     <a href="/setting" class="sidebar-link"><i class="fa-solid fa-sliders"></i> Site Setting</a>
         <a href="/addActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
+        <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i>Add Notice</a>
         <a href="/viewActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
         <a href="/viewAccount" class="sidebar-link d-block mb-2"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
         <a href="/contacts" class="sidebar-link d-block mb-2"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
