--- a/views/account.ejs
+++ b/views/account.ejs
@@ -15,11 +15,25 @@
   </style>
 </head>
 <body>
-
+<nav>
+   <ol class="breadcrumb m-5">
+    <li class="breadcrumb-item"><a href="/adminDashboard">Back to Dashboard</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Account Info</li>
+  </ol>
+</nav>
   <div class="container d-flex justify-content-center align-items-center centered-card">
+   
     <div class="card p-4 shadow-lg" style="max-width: 500px; width: 100%;">
       <h3 class="text-center fw-bold mb-3">Account Information</h3>
-     <form action="/viewAccount?_method=PATCH" method="POST">
+     
+
+      
+     <form action="/viewAccount?_method=PATCH" method="POST" enctype="multipart/form-data">
+      <div class="mb-3">
+        <label class="form-label">Change QR</label>
+        <input type="file" class="form-control" name="image"  onchange="previewImage(event)" required accept="image/*">
+        <img id="qrPreview" src="<%=updated.qr%>" alt="QR Preview" class="img-thumbnail" style="max-width: 200px;">
+      </div>
         <div class="mb-3">
           <label class="form-label">Bank Name</label>
           <input type="text" class="form-control" name="bankName" value="<%=updated.bankName%>" required>
@@ -40,6 +54,15 @@
       </form>
     </div>
   </div>
+<script>
+  function previewImage(event) {
+    const preview = document.getElementById('qrPreview');
+    const file = event.target.files[0];
+    if (file) {
+      preview.src = URL.createObjectURL(file);
+    }
+  }
+</script>
 
 </body>
 </html>
