--- a/views/siteSettings.ejs
+++ b/views/siteSettings.ejs
@@ -63,10 +63,10 @@
         <input type="url" class="form-control" name="instagram" value="<%= site.instagram %>">
       </div>
 
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <label class="form-label">Footer Message</label>
         <input type="text" class="form-control" name="footer" value="<%= site.footer %>">
-      </div>
+      </div> -->
 
       <button type="submit" class="btn btn-primary w-100">Update Settings</button>
     </form>
