done with notice

--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -17,7 +17,7 @@
       <h1 class="fw-bold">Welcome to the Admin Dashboard</h1>
       <p class="fs-4">Here is an overall summary of Website</p>
       <div class="row g-3">
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <h5 class="card-title">Unread Contacts</h5>
@@ -25,11 +25,19 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <h5 class="card-title">Total Activity</h5>
               <p class="card-text"><%= totalActivity %></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Total Notice</h5>
+              <p class="card-text"><%= totalNotice %></p>
             </div>
           </div>
         </div>
