--- a/views/adminDashboardSidebar.ejs
+++ b/views/adminDashboardSidebar.ejs
@@ -8,8 +8,10 @@
     
     <a href="/setting" class="sidebar-link"><i class="fa-solid fa-sliders"></i> Site Setting</a>
     <a href="/addActivity" class="sidebar-link"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
-    <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i> Add Notice</a>
+    
     <a href="/viewActivity" class="sidebar-link"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
+    <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i> Add Notice</a>
+    <a href="/viewNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-list-check"></i> Notice Management</a>
     <a href="/viewAccount" class="sidebar-link"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
     <a href="/contacts" class="sidebar-link"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
     <a href="/logout" class="sidebar-link"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
@@ -27,8 +29,10 @@
         
     <a href="/setting" class="sidebar-link"><i class="fa-solid fa-sliders"></i> Site Setting</a>
         <a href="/addActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-square-plus me-2"></i>Add Activity</a>
-        <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i>Add Notice</a>
+        
         <a href="/viewActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
+        <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i>Add Notice</a>
+        <a href="/viewNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-list-check"></i> Notice Management</a>
         <a href="/viewAccount" class="sidebar-link d-block mb-2"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
         <a href="/contacts" class="sidebar-link d-block mb-2"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
         <a href="/logout" class="sidebar-link d-block"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
