--- a/views/adminDashboardSidebar.ejs
+++ b/views/adminDashboardSidebar.ejs
@@ -2,7 +2,7 @@
 <div class="d-flex">
   <!-- Sidebar -->
   <nav class="sidebar fixed-sidebar d-none d-lg-flex flex-column p-3 shadow">
-    <div class="text-center mb-4">
+    <div class="text-center mb-1">
       <i class="fa-solid fa-gears fs-1 mb-3"></i>
     </div>
     
@@ -12,6 +12,8 @@
     <a href="/viewActivity" class="sidebar-link"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
     <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i> Add Notice</a>
     <a href="/viewNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-list-check"></i> Notice Management</a>
+     <a href="/postVacancy" class="sidebar-link d-block mb-2"><i class="fa-solid fa-briefcase"></i> Post Vacancy</a>
+     <a href="/viewVacancy" class="sidebar-link d-block mb-2"><i class="fa-solid fa-eye"></i> View Vacancy</a>
     <a href="/viewAccount" class="sidebar-link"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
     <a href="/contacts" class="sidebar-link"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
     <a href="/logout" class="sidebar-link"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
@@ -33,6 +35,7 @@
         <a href="/viewActivity" class="sidebar-link d-block mb-2"><i class="fa-solid fa-user-shield me-2"></i>Activity Management</a>
         <a href="/addNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-plus"></i>Add Notice</a>
         <a href="/viewNotice" class="sidebar-link d-block mb-2"><i class="fa-solid fa-list-check"></i> Notice Management</a>
+        <a href="/postVacancy" class="sidebar-link d-block mb-2"><i class="fa-solid fa-briefcase"></i> Post Vacancy</a>
         <a href="/viewAccount" class="sidebar-link d-block mb-2"><i class="fa-solid fa-gear me-2"></i>Account Info</a>
         <a href="/contacts" class="sidebar-link d-block mb-2"><i class="fa-solid fa-address-card me-2"></i>View Contacts</a>
         <a href="/logout" class="sidebar-link d-block"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
