--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -41,6 +41,14 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Total Vacancy</h5>
+              <p class="card-text"><%= totalVacancy %></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
